TestCases/Errors/range_value/observations/sum_07_obs.spm
 obs   9-17   0.00153846153846154 
 obs   9-18   0.00174915824915825 
 obs   4-19   0.0015625           
 obs   5-19   0.00208333333333333 
 obs   8-19   0.00324675324675325 
 obs   9-19   0.005               
 obs   4-20   0.00208333333333333 


error_value  9-17  0
error_value  9-18  0
error_value  4-19  0
error_value  5-19  0
error_value  8-19  0
error_value  9-19  0
error_value  4-20  0

